# kube-copilot

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  go.mod  go.sum  index.yaml  kube-copilot-0.1.14.tgz  kube-copilot-0.1.15.tgz  kube-copilot-0.1.16.tgz  kube-copilot-0.1.17.tgz  kube-copilot-0.1.18.tgz  kube-copilot-0.1.19.tgz  kube-copilot-0.1.20.tgz  kube-copilot-0.1.21.tgz  kube-copilot-0.1.22.tgz  kube-copilot-0.1.25.tgz  kube-copilot-0.1.26.tgz  kube-copilot-0.1.27.tgz  kube-copilot-0.2.0.tgz  kube-copilot-0.2.1.tgz  kubernetes.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  codeql.yml  release.yaml  test.yaml
cmd/kube-copilot/: analyze.go  audit.go  diagnose.go  execute.go  generate.go  main.go  version.go
examples/: mcp-config.json
helm/: README.md
helm/kube-copilot/: Chart.yaml  values.yaml
helm/kube-copilot/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
kube_copilot/: agent.py  chains.py  cli.py  kubeconfig.py  labeler.py  llm.py  output.py  prompts.py  python.py  shell.py
pkg/assistants/: simple.go
pkg/kubernetes/: apply.go  get.go
pkg/llms/: openai.go  tokens.go  tokens_test.go
pkg/tools/: googlesearch.go  kubectl.go  mcp.go  python.go  python_test.go  tool.go  trivy.go
pkg/utils/: term.go  yaml.go
pkg/workflows/: analyze.go  assistant.go  audit.go  generate.go  prompts.go  reactflow.go  simpleflow.go  swarm.go  workflow.go
web/: Home.py  config.toml
web/pages/: Analyze.py  Audit.py  Diagnose.py  Generate.py
