[tool.poetry]
name = "kube-copilot"
version = "0.1.19"
description = "Kubernetes Copilot"
authors = ["Pengfei Ni <feiskyer@gmail.com>"]
readme = "README.md"
packages = [{include = "kube_copilot"}]
homepage = "https://github.com/feiskyer/kube-copilot"
repository = "https://github.com/feiskyer/kube-copilot"
keywords = ["kubernetes", "copilot", "openai", "chatgpt"]

[tool.poetry.scripts]
kube-copilot = 'kube_copilot.cli:main'

[tool.poetry.dependencies]
python = ">=3.10,<4"
langchain = ">=0.0.180"
requests = ">=2.31"
openai = ">=0.27.4"
tiktoken = ">=0.3.1"
lark = "==1.1.5"
faiss-cpu = {version = "^1"}
google-api-python-client = ">=2.85.0"
click = ">=8.1.3"
kubernetes = "^26.1.0"
streamlit = "^1.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
