[tool.poetry]
name = "kube-copilot"
version = "0.1.26"
description = "Kubernetes Copilot"
authors = ["Pengfei Ni <feiskyer@gmail.com>"]
readme = "README.md"
packages = [{include = "kube_copilot"}]
homepage = "https://github.com/feiskyer/kube-copilot"
repository = "https://github.com/feiskyer/kube-copilot"
keywords = ["kubernetes", "copilot", "openai", "chatgpt"]

[tool.poetry.scripts]
kube-copilot = 'kube_copilot.cli:main'

[tool.poetry.dependencies]
python = ">=3.11,<4"
langchain = ">=0.0.180"
requests = ">=2.31"
openai = ">1"
tiktoken = ">=0.3.1"
lark = "==1.1.8"
faiss-cpu = {version = "^1"}
google-api-python-client = ">=2.85.0"
click = ">=8.1.3"
kubernetes = ">=28.0"
streamlit = "^1.24.0"
langchain-experimental = ">0.0.38"
langchain-community = "^0.0.36"
langchain-openai = "^0.1.6"

[tool.poetry.group.dev.dependencies]
httpx = {extras = ["socks"], version = "^0.26.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
